{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 410,
  "lineage": "ec8f6c51-af5a-a3b6-7755-eb1e7f0569ca",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03312f831c20d13a1",
            "domain": "vpc",
            "id": "eipalloc-03312f831c20d13a1",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-22-108-154.compute-1.amazonaws.com",
            "public_ip": "52.22.108.154",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "mentorship-NatGW_EIP0"
            },
            "tags_all": {
              "Name": "mentorship-NatGW_EIP0"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-080d235279a0d1d5b",
            "domain": "vpc",
            "id": "eipalloc-080d235279a0d1d5b",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-224-239-106.compute-1.amazonaws.com",
            "public_ip": "34.224.239.106",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "mentorship-NatGW_EIP1"
            },
            "tags_all": {
              "Name": "mentorship-NatGW_EIP1"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "fsb_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02d69c34f7a0bf36a",
            "arn": "arn:aws:ec2:us-east-1:624298610330:instance/i-06ba52a3a728dca23",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2_role_ssm",
            "id": "i-06ba52a3a728dca23",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "OG",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0104d17dded338c54",
            "private_dns": "ip-173-152-1-234.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "173.152.1.234",
            "public_ip": "54.157.97.92",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06ede3b51a66da549",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06ec426ae6d89b294",
            "tags": {
              "Name": "mentorship-instance"
            },
            "tags_all": {
              "Name": "mentorship-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-030ec6bed440a17d9"
            ]
          },
          "dependencies": [
            "aws_security_group.My_sg",
            "aws_subnet.public",
            "aws_vpc.fsb_vpc",
            "data.aws_ami.amazon_linux_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c94855ba95c71c99",
            "arn": "arn:aws:ec2:us-east-1:624298610330:instance/i-0cdcbd366b5a025cb",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cdcbd366b5a025cb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0232637b8d745579e",
            "private_dns": "ip-173-152-3-180.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "173.152.3.180",
            "public_ip": "44.198.60.118",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a19248979dd6ed56",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fca3301f659d4e91",
            "tags": {
              "Name": "mentorship"
            },
            "tags_all": {
              "Name": "mentorship"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00d20cbdf99de37c6"
            ]
          },
          "dependencies": [
            "aws_security_group.CloudSG",
            "aws_subnet.private",
            "aws_vpc.fsb_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "fsb_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:624298610330:internet-gateway/igw-0a6e94474c3fd90ea",
            "id": "igw-0a6e94474c3fd90ea",
            "owner_id": "624298610330",
            "tags": {
              "Name": "mentorship-fsb_igw"
            },
            "tags_all": {
              "Name": "mentorship-fsb_igw"
            },
            "vpc_id": "vpc-096f2552da9b3804b"
          },
          "dependencies": [
            "aws_vpc.fsb_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateways",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03312f831c20d13a1",
            "association_id": "eipassoc-0e1fdabb1166c13ef",
            "connectivity_type": "public",
            "id": "nat-08ff701fa756d70b3",
            "network_interface_id": "eni-060bf0613194a760b",
            "private_ip": "173.152.1.75",
            "public_ip": "52.22.108.154",
            "subnet_id": "subnet-06ec426ae6d89b294",
            "tags": {
              "Name": "mentorship-Nat_GW0"
            },
            "tags_all": {
              "Name": "mentorship-Nat_GW0"
            }
          },
          "dependencies": [
            "aws_eip.nat_gateway",
            "aws_subnet.public",
            "aws_vpc.fsb_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-080d235279a0d1d5b",
            "association_id": "eipassoc-0c88a7a244913966a",
            "connectivity_type": "public",
            "id": "nat-04466443ad256a98e",
            "network_interface_id": "eni-0fb6477b69352f16e",
            "private_ip": "173.152.2.71",
            "public_ip": "34.224.239.106",
            "subnet_id": "subnet-0d73720576a9a1e88",
            "tags": {
              "Name": "mentorship-Nat_GW1"
            },
            "tags_all": {
              "Name": "mentorship-Nat_GW1"
            }
          },
          "dependencies": [
            "aws_eip.nat_gateway",
            "aws_subnet.public",
            "aws_vpc.fsb_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:624298610330:route-table/rtb-03cdf538815214242",
            "id": "rtb-03cdf538815214242",
            "owner_id": "624298610330",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08ff701fa756d70b3",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mentorship-privateRT0"
            },
            "tags_all": {
              "Name": "mentorship-privateRT0"
            },
            "timeouts": null,
            "vpc_id": "vpc-096f2552da9b3804b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_gateway",
            "aws_nat_gateway.nat_gateways",
            "aws_subnet.public",
            "aws_vpc.fsb_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:624298610330:route-table/rtb-060442173b5a7e621",
            "id": "rtb-060442173b5a7e621",
            "owner_id": "624298610330",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04466443ad256a98e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mentorship-privateRT1"
            },
            "tags_all": {
              "Name": "mentorship-privateRT1"
            },
            "timeouts": null,
            "vpc_id": "vpc-096f2552da9b3804b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_gateway",
            "aws_nat_gateway.nat_gateways",
            "aws_subnet.public",
            "aws_vpc.fsb_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:624298610330:route-table/rtb-045fb6d3707ab6639",
            "id": "rtb-045fb6d3707ab6639",
            "owner_id": "624298610330",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a6e94474c3fd90ea",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mentorship"
            },
            "tags_all": {
              "Name": "mentorship"
            },
            "timeouts": null,
            "vpc_id": "vpc-096f2552da9b3804b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.fsb_igw",
            "aws_vpc.fsb_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_associations",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-045097ab79b28b761",
            "route_table_id": "rtb-03cdf538815214242",
            "subnet_id": "subnet-0fca3301f659d4e91"
          },
          "dependencies": [
            "aws_eip.nat_gateway",
            "aws_nat_gateway.nat_gateways",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.fsb_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-007ecce8115ad9824",
            "route_table_id": "rtb-060442173b5a7e621",
            "subnet_id": "subnet-0e0c117da9595732c"
          },
          "dependencies": [
            "aws_eip.nat_gateway",
            "aws_nat_gateway.nat_gateways",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.fsb_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0acf591c631c727ff",
            "route_table_id": "rtb-045fb6d3707ab6639",
            "subnet_id": "subnet-06ec426ae6d89b294"
          },
          "dependencies": [
            "aws_internet_gateway.fsb_igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.fsb_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02381afb8fb3d9220",
            "route_table_id": "rtb-045fb6d3707ab6639",
            "subnet_id": "subnet-0d73720576a9a1e88"
          },
          "dependencies": [
            "aws_internet_gateway.fsb_igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.fsb_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "CloudSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:624298610330:security-group/sg-00d20cbdf99de37c6",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-00d20cbdf99de37c6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "CloudSG20230427103000272300000001",
            "name_prefix": "CloudSG",
            "owner_id": "624298610330",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mentorship"
            },
            "tags_all": {
              "Name": "mentorship"
            },
            "timeouts": null,
            "vpc_id": "vpc-096f2552da9b3804b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.fsb_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "My_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:624298610330:security-group/sg-030ec6bed440a17d9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-030ec6bed440a17d9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "FSB_SG20230427103000274300000002",
            "name_prefix": "FSB_SG",
            "owner_id": "624298610330",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mentorship-my_SG"
            },
            "tags_all": {
              "Name": "mentorship-my_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-096f2552da9b3804b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.fsb_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:624298610330:subnet/subnet-0fca3301f659d4e91",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "173.152.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fca3301f659d4e91",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "624298610330",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mentorship-private_subnet0"
            },
            "tags_all": {
              "Name": "mentorship-private_subnet0"
            },
            "vpc_id": "vpc-096f2552da9b3804b"
          },
          "dependencies": [
            "aws_vpc.fsb_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:624298610330:subnet/subnet-0e0c117da9595732c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "173.152.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e0c117da9595732c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "624298610330",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mentorship-private_subnet1"
            },
            "tags_all": {
              "Name": "mentorship-private_subnet1"
            },
            "vpc_id": "vpc-096f2552da9b3804b"
          },
          "dependencies": [
            "aws_vpc.fsb_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:624298610330:subnet/subnet-06ec426ae6d89b294",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "173.152.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06ec426ae6d89b294",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "624298610330",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mentorship-public_subnet0"
            },
            "tags_all": {
              "Name": "mentorship-public_subnet0"
            },
            "vpc_id": "vpc-096f2552da9b3804b"
          },
          "dependencies": [
            "aws_vpc.fsb_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:624298610330:subnet/subnet-0d73720576a9a1e88",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "173.152.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d73720576a9a1e88",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "624298610330",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mentorship-public_subnet1"
            },
            "tags_all": {
              "Name": "mentorship-public_subnet1"
            },
            "vpc_id": "vpc-096f2552da9b3804b"
          },
          "dependencies": [
            "aws_vpc.fsb_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "fsb_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:624298610330:vpc/vpc-096f2552da9b3804b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "173.152.0.0/16",
            "default_network_acl_id": "acl-0cc6e0b9e62824553",
            "default_route_table_id": "rtb-006eca2163a7715c1",
            "default_security_group_id": "sg-0b9b8b472e3d7de34",
            "dhcp_options_id": "dopt-0cceabe3cbb0757e7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-096f2552da9b3804b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-006eca2163a7715c1",
            "owner_id": "624298610330",
            "tags": {
              "Name": "mentorship-fsb_vpc"
            },
            "tags_all": {
              "Name": "mentorship-fsb_vpc"
            }
          }
        }
      ]
    }
  ]
}